--- a/Sources/book_page.ui
+++ b/Sources/book_page.ui
@@ -96,7 +96,7 @@
            </size>
           </property>
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
          </widget>
         </item>
@@ -242,7 +242,7 @@
            </font>
           </property>
           <property name="text">
-           <string>59,2%</string>
+           <string notr="true">59,2%</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
