--- a/Sources/library_layout.ui
+++ b/Sources/library_layout.ui
@@ -358,7 +358,7 @@
         </size>
        </property>
        <property name="text">
-        <string/>
+        <string notr="true"/>
        </property>
        <property name="checkable">
         <bool>true</bool>
