--- a/Sources/login_window.ui
+++ b/Sources/login_window.ui
@@ -108,7 +108,7 @@
 }</string>
           </property>
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
           <property name="shortcut">
            <string notr="true"/>
@@ -158,7 +158,7 @@
 }</string>
           </property>
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
           <property name="shortcut">
            <string notr="true"/>
@@ -214,7 +214,7 @@
 }</string>
           </property>
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
           <property name="shortcut">
            <string notr="true"/>
