--- a/Sources/reading_window.ui
+++ b/Sources/reading_window.ui
@@ -103,8 +103,14 @@
           <height>25</height>
          </size>
         </property>
+        <property name="maximumSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
         <property name="text">
-         <string/>
+         <string notr="true"/>
         </property>
        </widget>
       </item>
