--- a/Sources/booktableofcontents.ui
+++ b/Sources/booktableofcontents.ui
@@ -48,25 +48,15 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QListWidget" name="TableOfContents">
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
-     </property>
-     <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
-     </property>
-     <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
-     </property>
-     <property name="showDropIndicator" stdset="0">
+    <widget class="QTreeWidget" name="TableOfContents">
+     <attribute name="headerVisible">
       <bool>false</bool>
-     </property>
-     <property name="spacing">
-      <number>5</number>
-     </property>
+     </attribute>
+     <column>
+      <property name="text">
+       <string notr="true">1</string>
+      </property>
+     </column>
     </widget>
    </item>
    <item>
