table of contents ui update

--- a/Sources/book_widget.ui
+++ b/Sources/book_widget.ui
@@ -120,7 +120,7 @@
         <item>
          <widget class="QLabel" name="Author">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -160,7 +160,7 @@
         <item>
          <widget class="QLabel" name="Title">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
