--- a/Sources/settings_readerlayoutstyle.ui
+++ b/Sources/settings_readerlayoutstyle.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>313</height>
+    <height>318</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -536,7 +536,7 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QComboBox" name="StyleBox">
+       <widget class="QComboBox" name="TextStyleBox">
         <property name="minimumSize">
          <size>
           <width>200</width>
