--- a/Sources/book_page.ui
+++ b/Sources/book_page.ui
@@ -32,6 +32,9 @@
     </property>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="focusPolicy">
+       <enum>Qt::NoFocus</enum>
+      </property>
       <property name="lineWidth">
        <number>0</number>
       </property>
@@ -580,6 +583,9 @@ p, li { white-space: pre-wrap; }
           </property>
           <item row="0" column="1">
            <spacer name="verticalSpacer_7">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
@@ -593,6 +599,9 @@ p, li { white-space: pre-wrap; }
           </item>
           <item row="1" column="0">
            <spacer name="horizontalSpacer_6">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -612,6 +621,9 @@ p, li { white-space: pre-wrap; }
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -619,6 +631,9 @@ p, li { white-space: pre-wrap; }
           </item>
           <item row="1" column="2">
            <spacer name="horizontalSpacer_7">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -632,6 +647,9 @@ p, li { white-space: pre-wrap; }
           </item>
           <item row="2" column="1">
            <spacer name="verticalSpacer_8">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
@@ -670,6 +688,9 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -698,6 +719,9 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -723,8 +747,14 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
-             <string/>
+             <string notr="true"/>
+            </property>
+            <property name="shortcut">
+             <string notr="true"/>
             </property>
            </widget>
           </item>
@@ -741,6 +771,9 @@ p, li { white-space: pre-wrap; }
               <width>16777215</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -776,6 +809,9 @@ p, li { white-space: pre-wrap; }
               <height>40</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
              <string>10/50</string>
             </property>
@@ -797,6 +833,9 @@ p, li { white-space: pre-wrap; }
               <width>16777215</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -826,8 +865,14 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
-             <string/>
+             <string notr="true"/>
+            </property>
+            <property name="shortcut">
+             <string notr="true"/>
             </property>
            </widget>
           </item>
@@ -844,6 +889,9 @@ p, li { white-space: pre-wrap; }
               <width>16777215</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -876,8 +924,14 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
-             <string/>
+             <string notr="true"/>
+            </property>
+            <property name="shortcut">
+             <string notr="true"/>
             </property>
            </widget>
           </item>
