--- a/Sources/reading_menu.ui
+++ b/Sources/reading_menu.ui
@@ -98,6 +98,25 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="SearchButton">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>70</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>70</width>
+          <height>70</height>
+         </size>
+        </property>
+        <property name="text">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
