library proxy model added

--- a/Sources/library_layout.ui
+++ b/Sources/library_layout.ui
@@ -30,7 +30,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="LibraryButtons" stretch="2,1,1,1,1,2,2,0,0,0">
+    <layout class="QHBoxLayout" name="LibraryButtons" stretch="2,1,1,0,1,1,2,2,0,0,0">
      <property name="spacing">
       <number>0</number>
      </property>
@@ -131,6 +131,28 @@
          <string>Title</string>
         </property>
        </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="_SortDirection">
+       <property name="minimumSize">
+        <size>
+         <width>30</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>30</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -347,13 +369,13 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>15</width>
+         <width>25</width>
          <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>15</width>
+         <width>25</width>
          <height>16777215</height>
         </size>
        </property>
