--- a/Sources/images.qrc
+++ b/Sources/images.qrc
@@ -28,5 +28,7 @@
         <file>Images/LightNewReadProfile.png</file>
         <file>Images/LightReadProfileSwap.png</file>
         <file>Images/LightArrowOpen.png</file>
+        <file>Images/LightSortArrayFalse.png</file>
+        <file>Images/LightSortArrayTrue.png</file>
     </qresource>
 </RCC>
