--- a/Sources/reading_window.ui
+++ b/Sources/reading_window.ui
@@ -1043,7 +1043,7 @@ p, li { white-space: pre-wrap; }
          <number>80</number>
         </property>
         <property name="textInteractionFlags">
-         <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextEditable|Qt::TextEditorInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         <set>Qt::LinksAccessibleByMouse</set>
         </property>
         <property name="placeholderText">
          <string notr="true"/>
