--- a/Sources/reading_search_widget.ui
+++ b/Sources/reading_search_widget.ui
@@ -102,7 +102,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="spinBox">
+        <widget class="QSpinBox" name="PreviewSize">
          <property name="minimumSize">
           <size>
            <width>40</width>
