window geometry saving added

--- a/Sources/main_window.ui
+++ b/Sources/main_window.ui
@@ -17,6 +17,9 @@
    <property name="spacing">
     <number>0</number>
    </property>
+   <property name="sizeConstraint">
+    <enum>QLayout::SetNoConstraint</enum>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
