--- a/Sources/settings_readerlayout.ui
+++ b/Sources/settings_readerlayout.ui
@@ -189,37 +189,37 @@
        </item>
        <item>
         <widget class="QWidget" name="_OverallSettingsWidget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>50</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true"/>
-         </property>
-         <layout class="QFormLayout" name="formLayout_2">
-          <property name="sizeConstraint">
-           <enum>QLayout::SetFixedSize</enum>
-          </property>
-          <property name="horizontalSpacing">
-           <number>0</number>
-          </property>
-          <property name="verticalSpacing">
-           <number>5</number>
-          </property>
-          <property name="leftMargin">
-           <number>10</number>
-          </property>
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <property name="rightMargin">
-           <number>10</number>
-          </property>
-          <property name="bottomMargin">
-           <number>15</number>
-          </property>
+	<property name="minimumSize">
+	<size>
+	<width>0</width>
+	<height>50</height>
+	</size>
+	</property>
+	<property name="styleSheet">
+	<string notr="true"/>
+	</property>
+	<layout class="QFormLayout" name="formLayout_2">
+	<property name="sizeConstraint">
+	<enum>QLayout::SetFixedSize</enum>
+	</property>
+	<property name="horizontalSpacing">
+	<number>0</number>
+	</property>
+	<property name="verticalSpacing">
+	<number>5</number>
+	</property>
+	<property name="leftMargin">
+	<number>10</number>
+	</property>
+	<property name="topMargin">
+	<number>0</number>
+	</property>
+	<property name="rightMargin">
+	<number>10</number>
+	</property>
+	<property name="bottomMargin">
+	<number>15</number>
+	</property>
           <item row="0" column="0" colspan="2">
            <widget class="Line" name="line_2">
             <property name="maximumSize">
@@ -470,7 +470,7 @@
            </widget>
           </item>
           <item row="6" column="0" colspan="2">
-           <widget class="Line" name="line_61">
+           <widget class="Line" name="line_63">
             <property name="maximumSize">
              <size>
               <width>460</width>
@@ -483,6 +483,57 @@
            </widget>
           </item>
           <item row="7" column="0">
+           <widget class="QLabel" name="TextColumnsIndent">
+            <property name="minimumSize">
+             <size>
+              <width>150</width>
+              <height>25</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>150</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Text columns indent</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="1">
+           <widget class="QComboBox" name="TextColumnsIndentBox">
+            <property name="minimumSize">
+             <size>
+              <width>200</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>300</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="currentText">
+             <string notr="true"/>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="0" colspan="2">
+           <widget class="Line" name="line_61">
+            <property name="maximumSize">
+             <size>
+              <width>460</width>
+              <height>10</height>
+             </size>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="0">
            <widget class="QLabel" name="TextAntiAliasing">
             <property name="minimumSize">
              <size>
@@ -501,7 +552,7 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="1">
+          <item row="9" column="1">
            <widget class="QComboBox" name="TextAntiAliasingBox">
             <property name="minimumSize">
              <size>
@@ -527,7 +578,7 @@
             </item>
            </widget>
           </item>
-          <item row="8" column="0" colspan="2">
+          <item row="10" column="0" colspan="2">
            <widget class="Line" name="line_3">
             <property name="maximumSize">
              <size>
@@ -540,7 +591,7 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="0">
+          <item row="11" column="0">
            <widget class="QLabel" name="ParagraphLeftIdent">
             <property name="minimumSize">
              <size>
@@ -559,7 +610,7 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="1">
+          <item row="11" column="1">
            <widget class="QComboBox" name="ParagraphLeftIdentBox">
             <property name="minimumSize">
              <size>
@@ -1073,7 +1124,7 @@
             </item>
            </widget>
           </item>
-          <item row="10" column="0" colspan="2">
+          <item row="12" column="0" colspan="2">
            <widget class="Line" name="line_4">
             <property name="maximumSize">
              <size>
@@ -1086,7 +1137,7 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="0">
+          <item row="13" column="0">
            <widget class="QLabel" name="ParagraphTopIdent">
             <property name="minimumSize">
              <size>
@@ -1105,7 +1156,7 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="1">
+          <item row="13" column="1">
            <widget class="QComboBox" name="ParagraphTopIdentBox">
             <property name="minimumSize">
              <size>
@@ -1616,7 +1667,7 @@
             </item>
            </widget>
           </item>
-          <item row="12" column="0" colspan="2">
+          <item row="14" column="0" colspan="2">
            <widget class="Line" name="line_5">
             <property name="maximumSize">
              <size>
@@ -1629,7 +1680,7 @@
             </property>
            </widget>
           </item>
-          <item row="13" column="0">
+          <item row="15" column="0">
            <widget class="QLabel" name="TextLeftIdent">
             <property name="minimumSize">
              <size>
@@ -1648,7 +1699,7 @@
             </property>
            </widget>
           </item>
-          <item row="13" column="1">
+          <item row="15" column="1">
            <widget class="QComboBox" name="TextLeftIdentBox">
             <property name="minimumSize">
              <size>
@@ -2159,7 +2210,7 @@
             </item>
            </widget>
           </item>
-          <item row="14" column="0" colspan="2">
+          <item row="16" column="0" colspan="2">
            <widget class="Line" name="line_6">
             <property name="maximumSize">
              <size>
@@ -2172,7 +2223,7 @@
             </property>
            </widget>
           </item>
-          <item row="15" column="0">
+          <item row="17" column="0">
            <widget class="QLabel" name="TextRightIndent">
             <property name="minimumSize">
              <size>
@@ -2191,7 +2242,7 @@
             </property>
            </widget>
           </item>
-          <item row="15" column="1">
+          <item row="17" column="1">
            <widget class="QComboBox" name="TextRightIdentBox">
             <property name="minimumSize">
              <size>
@@ -2702,7 +2753,7 @@
             </item>
            </widget>
           </item>
-          <item row="16" column="0" colspan="2">
+          <item row="18" column="0" colspan="2">
            <widget class="Line" name="line_7">
             <property name="maximumSize">
              <size>
@@ -2715,7 +2766,7 @@
             </property>
            </widget>
           </item>
-          <item row="17" column="0">
+          <item row="19" column="0">
            <widget class="QLabel" name="TextTopIdent">
             <property name="minimumSize">
              <size>
@@ -2734,7 +2785,7 @@
             </property>
            </widget>
           </item>
-          <item row="17" column="1">
+          <item row="19" column="1">
            <widget class="QComboBox" name="TextTopIndentBox">
             <property name="minimumSize">
              <size>
@@ -3245,7 +3296,7 @@
             </item>
            </widget>
           </item>
-          <item row="18" column="0" colspan="2">
+          <item row="20" column="0" colspan="2">
            <widget class="Line" name="line_8">
             <property name="maximumSize">
              <size>
@@ -3258,7 +3309,7 @@
             </property>
            </widget>
           </item>
-          <item row="19" column="0">
+          <item row="21" column="0">
            <widget class="QLabel" name="TextBottomIndent">
             <property name="minimumSize">
              <size>
@@ -3277,7 +3328,7 @@
             </property>
            </widget>
           </item>
-          <item row="19" column="1">
+          <item row="21" column="1">
            <widget class="QComboBox" name="TextBottomIndentBox">
             <property name="minimumSize">
              <size>
