--- a/Sources/reading_table_of_contents.ui
+++ b/Sources/reading_table_of_contents.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BookTableOfContents</class>
- <widget class="QDialog" name="BookTableOfContents">
+ <class>ReadingTableOfContents</class>
+ <widget class="QDialog" name="ReadingTableOfContents">
   <property name="geometry">
    <rect>
     <x>0</x>
