--- a/Sources/reading_search_widget.ui
+++ b/Sources/reading_search_widget.ui
@@ -96,6 +96,11 @@
        </item>
        <item>
         <widget class="QLabel" name="WordsInPreviewLabel">
+         <property name="font">
+          <font>
+           <pointsize>8</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Words in preview:</string>
          </property>
