--- a/Sources/library_layout.ui
+++ b/Sources/library_layout.ui
@@ -193,6 +193,18 @@
          <height>30</height>
         </size>
        </property>
+       <property name="statusTip">
+        <string notr="true"/>
+       </property>
+       <property name="whatsThis">
+        <string notr="true"/>
+       </property>
+       <property name="accessibleName">
+        <string notr="true"/>
+       </property>
+       <property name="accessibleDescription">
+        <string notr="true"/>
+       </property>
        <property name="styleSheet">
         <string notr="true"/>
        </property>
