--- a/Sources/settings_readerlayoutstyle.ui
+++ b/Sources/settings_readerlayoutstyle.ui
@@ -142,367 +142,6 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="SizeBox">
-        <property name="minimumSize">
-         <size>
-          <width>200</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>300</width>
-          <height>30</height>
-         </size>
-        </property>
-        <item>
-         <property name="text">
-          <string>6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>7</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>8</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>9</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>10</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>11</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>12</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>13</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>14</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>15</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>16</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>17</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>18</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>19</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>20</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>21</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>22</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>24</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>26</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>27</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>28</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>29</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>30</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>31</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>32</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>33</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>34</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>35</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>36</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>37</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>38</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>39</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>40</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>41</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>42</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>43</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>44</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>45</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>46</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>47</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>48</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>49</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>50</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>51</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>52</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>53</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>54</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>55</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>56</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>57</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>58</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>59</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>60</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>61</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>62</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>63</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>64</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>65</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>66</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>67</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>68</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>69</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>70</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>71</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>72</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>73</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>74</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>75</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>76</string>
-         </property>
-        </item>
-       </widget>
-      </item>
       <item row="4" column="0" colspan="2">
        <widget class="Line" name="line_18">
         <property name="maximumSize">
@@ -741,6 +380,25 @@
           <string>Center</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="SizeBox">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="currentText">
+         <string notr="true"/>
+        </property>
        </widget>
       </item>
      </layout>
